hphp/test/slow/async/lambda6.php.expectf

Fatal error: Encountered unexpected token '==>'. in %s/lambda6.php on line 3
